log
Fri, Jun 20, 2025 10:01:12 PM: 
 tests:  1|8
total_score: 0/70
5729e4d
Fri, Jun 20, 2025 10:07:35 PM: 
 treemap.c | 122 +++++++++++++++++++++++++++++++++++++++++++++++++++-----------
 1 file changed, 102 insertions(+), 20 deletions(-)
Compilation failed
C:\Users\maxi\AppData\Local\Temp\cckUyBnW.o: In function `erase_test1':
C:\Users\maxi\Desktop\lab 4\lab-4-rboles-binarios-de-b-squeda-maxifargo/test.c:267: undefined reference to `eraseTreeMap'
C:\Users\maxi\AppData\Local\Temp\cckUyBnW.o: In function `erase_test2':
C:\Users\maxi\Desktop\lab 4\lab-4-rboles-binarios-de-b-squeda-maxifargo/test.c:281: undefined reference to `eraseTreeMap'
C:\Users\maxi\AppData\Local\Temp\cckUyBnW.o: In function `erase_test3':
C:\Users\maxi\Desktop\lab 4\lab-4-rboles-binarios-de-b-squeda-maxifargo/test.c:302: undefined reference to `eraseTreeMap'
collect2.exe: error: ld returned 1 exit status
f7fe4fd
Fri, Jun 20, 2025 10:13:18 PM: 
Compilation failed
C:\Users\maxi\AppData\Local\Temp\cceTn20B.o: In function `erase_test1':
C:\Users\maxi\Desktop\lab 4\lab-4-rboles-binarios-de-b-squeda-maxifargo/test.c:267: undefined reference to `eraseTreeMap'
C:\Users\maxi\AppData\Local\Temp\cceTn20B.o: In function `erase_test2':
C:\Users\maxi\Desktop\lab 4\lab-4-rboles-binarios-de-b-squeda-maxifargo/test.c:281: undefined reference to `eraseTreeMap'
C:\Users\maxi\AppData\Local\Temp\cceTn20B.o: In function `erase_test3':
C:\Users\maxi\Desktop\lab 4\lab-4-rboles-binarios-de-b-squeda-maxifargo/test.c:302: undefined reference to `eraseTreeMap'
collect2.exe: error: ld returned 1 exit status
c94b391
Fri, Jun 20, 2025 10:30:58 PM: 
Compilation failed
C:\Users\maxi\AppData\Local\Temp\ccePt9QA.o: In function `erase_test1':
C:\Users\maxi\Desktop\lab 4\lab-4-rboles-binarios-de-b-squeda-maxifargo/test.c:267: undefined reference to `eraseTreeMap'
C:\Users\maxi\AppData\Local\Temp\ccePt9QA.o: In function `erase_test2':
C:\Users\maxi\Desktop\lab 4\lab-4-rboles-binarios-de-b-squeda-maxifargo/test.c:281: undefined reference to `eraseTreeMap'
C:\Users\maxi\AppData\Local\Temp\ccePt9QA.o: In function `erase_test3':
C:\Users\maxi\Desktop\lab 4\lab-4-rboles-binarios-de-b-squeda-maxifargo/test.c:302: undefined reference to `eraseTreeMap'
collect2.exe: error: ld returned 1 exit status
866c56a
Fri, Jun 20, 2025 10:33:34 PM: 
Compilation failed
C:\Users\maxi\AppData\Local\Temp\cc10y3Ln.o: In function `erase_test1':
C:\Users\maxi\Desktop\lab 4\lab-4-rboles-binarios-de-b-squeda-maxifargo/test.c:267: undefined reference to `eraseTreeMap'
C:\Users\maxi\AppData\Local\Temp\cc10y3Ln.o: In function `erase_test2':
C:\Users\maxi\Desktop\lab 4\lab-4-rboles-binarios-de-b-squeda-maxifargo/test.c:281: undefined reference to `eraseTreeMap'
C:\Users\maxi\AppData\Local\Temp\cc10y3Ln.o: In function `erase_test3':
C:\Users\maxi\Desktop\lab 4\lab-4-rboles-binarios-de-b-squeda-maxifargo/test.c:302: undefined reference to `eraseTreeMap'
collect2.exe: error: ld returned 1 exit status
735ad59
Fri, Jun 20, 2025 10:33:44 PM: 
 treemap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  29|0
total_score: 70/70
2286412
Fri, Jun 20, 2025 11:13:07 PM: 
 treemap.c | 61 ++++++++++++++++++++++++++++++++++++++++++++-----------------
 1 file changed, 44 insertions(+), 17 deletions(-)
 tests:  29|0
total_score: 70/70
34e97cb
Fri, Jun 20, 2025 11:17:18 PM: 
 treemap.c | 10 +---------
 1 file changed, 1 insertion(+), 9 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:75:9: error: 'pa' undeclared (first use in this function)
     if (pa
         ^~
treemap.c:75:9: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:78:1: error: expected ')' before 'TreeNode'
 TreeNode * minimum(TreeNode * x) {
 ^~~~~~~~
treemap.c:75:5: error: this 'if' clause does not guard... [-Werror=misleading-indentation]
     if (pa
     ^~
test.c:607:0: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'if'
test.c:606:1: error: expected declaration or statement at end of input
 }
 ^
cc1.exe: all warnings being treated as errors
36fc5ea
Fri, Jun 20, 2025 11:18:38 PM: 
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:75:9: error: 'pa' undeclared (first use in this function)
     if (pa
         ^~
treemap.c:75:9: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:78:1: error: expected ')' before 'TreeNode'
 TreeNode * minimum(TreeNode * x) {
 ^~~~~~~~
treemap.c:75:5: error: this 'if' clause does not guard... [-Werror=misleading-indentation]
     if (pa
     ^~
test.c:607:0: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'if'
test.c:606:1: error: expected declaration or statement at end of input
 }
 ^
cc1.exe: all warnings being treated as errors
de5cec3
Fri, Jun 20, 2025 11:18:51 PM: 
 treemap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  29|0
total_score: 70/70
29f8072
Fri, Jun 20, 2025 11:19:52 PM: 
 treemap.c | 13 +++----------
 1 file changed, 3 insertions(+), 10 deletions(-)
Compilation failed
C:\Users\maxi\AppData\Local\Temp\ccUPPEl6.o: In function `first_test1':
C:\Users\maxi\Desktop\lab 4\lab-4-rboles-binarios-de-b-squeda-maxifargo/test.c:318: undefined reference to `firstTreeMap'
C:\Users\maxi\AppData\Local\Temp\ccUPPEl6.o: In function `first_test2':
C:\Users\maxi\Desktop\lab 4\lab-4-rboles-binarios-de-b-squeda-maxifargo/test.c:340: undefined reference to `firstTreeMap'
collect2.exe: error: ld returned 1 exit status
d2d77aa
Fri, Jun 20, 2025 11:21:05 PM: 
 treemap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c:145:1: error: unknown type name 'PPair'
 PPair * upperBound(TreeMap * tree, void* key) {
 ^~~~~
treemap.c:145:9: error: conflicting types for 'upperBound'
 PPair * upperBound(TreeMap * tree, void* key) {
         ^~~~~~~~~~
In file included from treemap.c:4:0,
                 from test.c:4:
treemap.h:19:8: note: previous declaration of 'upperBound' was here
 Pair * upperBound(TreeMap * tree, void* key);
        ^~~~~~~~~~
In file included from test.c:4:0:
treemap.c: In function 'upperBound':
treemap.c:161:18: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
         return ub->pair;
                ~~^~~~~~
test.c: In function 'ub_test1':
test.c:427:15: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     Pair* aux=upperBound(tree, &j);
               ^~~~~~~~~~
test.c: In function 'ub_test2':
test.c:447:15: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     Pair* aux=upperBound(tree, &j);
               ^~~~~~~~~~
test.c: In function 'ub_test3':
test.c:468:15: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     Pair* aux=upperBound(tree, &j);
               ^~~~~~~~~~
test.c: In function 'ub_test4':
test.c:489:15: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     Pair* aux=upperBound(tree, &j);
               ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
53eb24c
Fri, Jun 20, 2025 11:21:30 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  25|1
total_score: 60/70
58199cb
